test/data/semantic/bad/struct_pattern_type_mismatch.coy
struct S(i64);

fn main() -> () {
    let x = 1;

    let S(a) = x;

    ()
}
